--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -44,3 +44,8 @@
 @button-text-IE8-color: #444;
 @button-text-color: #fff;
 @button-background-color: #bdc3c7;
+
+/* =========
+   Type
+   ========= */
+@headings-font-family: inherit;
