--- a/src/css/main.less
+++ b/src/css/main.less
@@ -3,12 +3,15 @@
 @import "./normalize.less";
 @import "./base.less";
 @import "./utils.less";
+@import "./type.less";
 
 @import "./input.less";
 
 // Grids
 @import "./grids.less";
+
 // Controls
+@import "./divider.less";
 @import "./buttons.less";
 @import "./menus.less";
 @import "./label.less";
