--- a/src/css/utils.less
+++ b/src/css/utils.less
@@ -55,6 +55,9 @@
     text-align: right;
 }
 
+//
+.text-nowrap { white-space: nowrap; }
+
 .center-block {
     display: block;
     margin-left: auto;
