--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -1,6 +1,6 @@
 // common config
-@default-font-family: Arial, Helvetica, sans-serif;
-@default-font-size: 12px;
+@default-font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimSun, "宋体", STXihei, "华文细黑", sans-serif;
+@default-font-size: 14px;
 @text-color: #666;
 @body-color: #FFF;
 
@@ -43,9 +43,13 @@
    ========= */
 @button-text-IE8-color: #444;
 @button-text-color: #fff;
-@button-background-color: #bdc3c7;
+@button-background-color: #bdc3c7; 
 
 /* =========
    Type
    ========= */
-@headings-font-family: inherit;
+@hei-font: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimHei, "黑体", STHeiti, "华文黑体", sans-serif;
+@headings-font-family: @hei-font;
+@headings-font-weight: bold;
+@headings-color: #000;
+@headings-small-color: #333;
