--- a/demo.css
+++ b/demo.css
@@ -33,19 +33,12 @@
     margin: 0 auto 40px;
 }
 
-h1 {
+.page-header {
     background: #252525;
-    color: #fff;
-    margin-bottom: 10px;
-    font-size: 22px;
-    line-height: 40px;
-    padding: 0 8px;
-    margin: 0;
-    font-weight: normal;
-    text-rendering: optimizelegibility;
 }
-h2 {
-    font-size: 24px;
+.page-header h1{
+    color: #fff;
+    margin: 0;
 }
 .view {
     padding: 20px;
@@ -108,11 +101,6 @@ h2 {
     background-color: #1d9d74;
     color: #fff;
 
-}
-h3 {
-    padding-bottom: 9px;
-    margin: 40px 0 20px;
-    border-bottom: 1px solid #eeeeee;
 }
 
 .ui.image {
