--- a/src/css/main.less
+++ b/src/css/main.less
@@ -5,12 +5,14 @@
 @import "./utils.less";
 @import "./type.less";
 
-@import "./input.less";
-
 // Grids
 @import "./grids.less";
 
+// form
+@import "./form.less";
+
 // Controls
+@import "./input.less";
 @import "./divider.less";
 @import "./buttons.less";
 @import "./menus.less";
