update form and links.

--- a/src/css/input.less
+++ b/src/css/input.less
@@ -24,7 +24,8 @@
   position: relative;
   color: rgba(0, 0, 0, 0.7);
 }
-.@{ui-class-prefix}-input input {
+.@{ui-class-prefix}-input input,
+.@{ui-class-prefix}-input textarea, {
   width: 100%;
   font-family: @default-font-family;
 
