--- a/src/css/form.less
+++ b/src/css/form.less
@@ -46,6 +46,7 @@
 
 .field .field-error {
     color: red;
+    margin-top: 0.2em;
 }
 .field-wrapper {
     padding: 0.65em 0em;
@@ -87,4 +88,10 @@ textarea:focus {
     outline: 0;
     outline: thin dotted \9; /* IE6-9 */
     border-color: #129FEA;
+}
+
+.@{ui-class-prefix}-xbox-group.vertical>div{
+    display: block;
+    margin-top: 0.3em;
+    margin-bottom: 0.3em;
 }
